배너, 별점 기능, 프레임워크 아이콘으로 수정

--- a/react-homework/day28/src/components/boards-list/banner/styles.module.css
+++ b/react-homework/day28/src/components/boards-list/banner/styles.module.css
@@ -1,4 +1,5 @@
-/* .banner_image {
-  width: 961.473px;
-  height: 494px;
-} */
+.banner_image {
+  object-fit: cover;
+  width: 100%;
+  height: 516px;
+}
