--- a/react-homework/day28/src/components/board-detail/detail/styles.module.css
+++ b/react-homework/day28/src/components/board-detail/detail/styles.module.css
@@ -98,25 +98,25 @@
   gap: 24px;
 }
 
-.bad_btn {
-  background: none;
-  border: none;
-  padding: 0;
+.dislike_btn_group {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
-.good_btn {
-  background: none;
-  border: none;
-  padding: 0;
+.like_btn_group {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
-.bad_count {
+.dislike_count {
   color: #5f5f5f;
   font-size: 14px;
   text-align: center;
 }
 
-.good_count {
+.like_count {
   color: #f66a6a;
   font-size: 14px;
   text-align: center;
