--- a/homework/my-app/src/components/boards-list/list/style.module.css
+++ b/homework/my-app/src/components/boards-list/list/style.module.css
@@ -1,4 +1,3 @@
-
 .inputContainer {
   display: flex;
   justify-content: flex-end;
@@ -27,9 +26,6 @@
   outline: none;
   font-size: 16px;
   height: 48px;
-  
-
-
 }
 .dateInput::placeholder {
   color: var(--gray-600, #777);
@@ -52,10 +48,7 @@
   top: 50%;
   transform: translateY(-50%); 
   cursor: pointer;  */
-  
 }
-
-
 
 .listContainer {
   display: flex;
@@ -94,7 +87,7 @@
 .listNum {
   font-size: 16px;
   font-weight: 900;
-  color: var(--gray-700)
+  color: var(--gray-700);
 }
 .date {
   font-size: 16px;
@@ -106,16 +99,14 @@
 .authorName {
   font-size: 14px;
   font-weight: 600;
-
 }
 
 .title {
   font-size: 20px;
   font-weight: 900;
-  color: var(--gray-900)
+  color: var(--gray-900);
 }
 .trachIcon {
-
 }
 .titleContainer {
   display: flex; /* Flexbox를 사용하여 수평 정렬 */
@@ -134,14 +125,11 @@
   object-fit: cover; /* 이미지 비율을 유지하면서 크기에 맞게 잘라냄 */
 }
 
-
-
 .datePickerContainer {
   display: flex;
   align-items: center;
   border-radius: 8px;
   width: 300px;
-
 }
 .customInput {
   width: 120%; /* 원하는 너비 */
@@ -154,8 +142,7 @@
 }
 
 .react-datepicker__input-container::before {
-
   width: 24px; /* 아이콘의 너비 */
   height: 24px; /* 아이콘의 높이 */
-  background-image: url('/image/add.png'); /* 아이콘 경로 */
+  background-image: url("/image/add.png"); /* 아이콘 경로 */
 }
