--- a/study/src/app/globals.css
+++ b/study/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import "antd/dist/reset.css";
 
 :root {
   --noto-sans-kr: "Noto Sans KR";
