--- a/cna-homework/src/app/globals.css
+++ b/cna-homework/src/app/globals.css
@@ -25,3 +25,10 @@ body {
     text-wrap: balance;
   }
 } */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Pretendard-Regular;
+}
