refactor: replace like/dislike images with UI library icons and separate into individual components for re-render optimization

--- a/trip-talk/src/app/components/BoardsDetail/styles.module.css
+++ b/trip-talk/src/app/components/BoardsDetail/styles.module.css
@@ -40,20 +40,12 @@
   @apply flex justify-center items-center gap-6;
 }
 
-.reaction > div {
+.reaction > * {
   @apply flex flex-col justify-center items-center gap-1;
 }
 
 .reaction > div > p {
   @apply text-sm font-normal;
-}
-
-.bad_count {
-  color: #5f5f5f;
-}
-
-.good_count {
-  @apply text-lightCoral;
 }
 
 .button_layout {
