--- a/Next/nextproject/next-app/src/app/component/board-detail/detail/style.module.css
+++ b/Next/nextproject/next-app/src/app/component/board-detail/detail/style.module.css
@@ -5,7 +5,14 @@
   left: 320px;
   gap: 40px;
 }
-
+.css_banner {
+  width: 100%;
+  height: 516px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
 .css_header {
   width: 1280px;
   height: 72px;
@@ -101,6 +108,9 @@
   gap: 24px;
   margin-top: 40px;
   margin-bottom: 40px;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+  font-size: 30px;
 }
 
 .css_bottomimage {
@@ -196,4 +206,40 @@
   width: 28px;
   height: 24px;
   text-align: right;
+}
+
+.css_showaddressitem {
+  width: 1280px;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+.css_showaddressnum {
+  width: 1280px;
+  height: 50px;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+  gap: 8px;
+}
+.css_showaddress {
+  width: 1280px;
+  height: 50px;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+}
+
+.css_showaddressdetail {
+  width: 100%;
+  height: 50px;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+}
+
+.css_showyoutubeUrl {
+  width: 100%;
+  height: 50px;
+  border: 1px solid #e4e4e4;
+  border-radius: 5px;
+  margin-top: 50px;
 }
