--- a/Next/nextproject/next-app/src/app/component/board-list/list/style.module.css
+++ b/Next/nextproject/next-app/src/app/component/board-list/list/style.module.css
@@ -1,19 +1,26 @@
+.css_layout {
+  width: 1280px;
+  height: 2171px;
+  padding: 40px 0px 40px 0px;
+  left: 320px;
+  gap: 40px;
+}
 .css_banner {
-  width: 1187px;
+  width: 100%;
+  height: 516px;
   margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
 }
 
-.css_listbanner {
-  width: 1280px;
-  height: 656px;
+.css_listborder {
   border-radius: 16px;
-  padding: 24px 48px 24px 48px;
+  padding: 100px 48px 100px 48px;
   gap: 24px;
-  box-shadow: 20px 20px 20px black;
+  box-shadow: 0px 8px 12px #bdbdbd;
 }
 .css_listheader {
-  width: 1184px;
-  height: 52px;
   padding: 16px 24px 16px 24px;
   gap: 8px;
   display: flex;
@@ -26,7 +33,7 @@
   gap: 10px;
 }
 .css_listtitle {
-  width: 848px;
+  width: 840px;
   height: 20px;
 
   text-align: left;
@@ -55,13 +62,15 @@
   gap: 12px;
   display: flex;
   flex-direction: column;
+  margin-top: 50px;
+  margin-bottom: 200px;
 }
 
 .css_yourboard {
   width: 1184px;
   height: 44px;
   border-radius: 8px;
-  border: 1px solid black;
+  border: 2px solid #9e9e9e;
   padding: 12px 24px 12px 24px;
   gap: 8px;
   display: flex;
@@ -94,4 +103,13 @@
   width: 100px;
   height: 20px;
   gap: 10px;
+}
+
+.css_createboard {
+  width: 90px;
+  height: 50px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  color: white;
+  background-color: #2974e5;
 }
