--- a/homework/my-app/src/components/boards-list/styles.module.css
+++ b/homework/my-app/src/components/boards-list/styles.module.css
@@ -5,8 +5,9 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  box-shadow: 0px 0px 20px #919191;
+  box-shadow: 0px 0px 20px lightgray;
   margin-top: 40px;
+  border-radius: 16px;
 }
 
 .css_header {
