--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -14,6 +14,11 @@
   }
 }
 
+/* @font-face {
+  font-family: "Pretendard";
+  src: url("/my-app/src/app/fonts/GeistMonoVF.woff");
+} */
+
 * {
   box-sizing: border-box;
   margin: 0px;
@@ -23,7 +28,7 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: "Pretendard"; */
   display: flex;
   justify-content: center;
 }
