--- a/react-homework/day30/src/components/boards-write/styles.module.css
+++ b/react-homework/day30/src/components/boards-write/styles.module.css
@@ -46,25 +46,6 @@
   gap: 8px;
 }
 
-.input_box_zip_code {
-  padding: 12px 16px;
-  flex-direction: column;
-  border-radius: 8px;
-  border: 1px solid #d4d3d3;
-  width: 82px;
-}
-
-.btn_search_zip_code {
-  display: flex;
-  height: 48px;
-  padding: 12px 16px;
-  align-items: center;
-  border-radius: 8px;
-  border: 1px solid black;
-  background-color: white;
-  font-size: 18px;
-}
-
 .upload_group {
   display: flex;
   gap: 16px;
@@ -77,7 +58,11 @@
   gap: 16px;
 }
 
-.modal_password_input {
-  width: 100%;
-  border-radius: 1px solid blue;
+.password_modal_title {
+  margin-bottom: 10px;
+}
+
+.custom_input {
+  padding: 5px;
+  border-radius: 4px;
 }
