--- a/react-homework/day30/src/components/styles.module.css
+++ b/react-homework/day30/src/components/styles.module.css
@@ -38,6 +38,14 @@
   overflow: auto;
 }
 
+.input_box_zip_code {
+  padding: 12px 16px;
+  flex-direction: column;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+  width: 82px;
+}
+
 #file {
   display: none;
 }
