--- a/02-main_camp/Day29/src/app/globals.css
+++ b/02-main_camp/Day29/src/app/globals.css
@@ -4,9 +4,9 @@
 
 * {
   font-family: "Pretendard";
-  margin: 0;
+  /* margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box; */
 }
 
 body {
