design: add global header footer layout

--- a/03-trip/03-03-Next/src/app/globals.css
+++ b/03-trip/03-03-Next/src/app/globals.css
@@ -30,7 +30,7 @@ html {
     padding: 0;
     /* color: var(--mono-gray900); */
     font-size: 1.6rem;
-    font-family: var(--font-paperlogy-regular);
+    font-family: var(--font-paperlogy-light);
 }
 
 body {
