--- a/02-main_camp/Day30/src/app/boards/styles.module.css
+++ b/02-main_camp/Day30/src/app/boards/styles.module.css
@@ -3,5 +3,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 2.5rem;
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
 }
