--- a/frontend/next-homework/src/app/components/boards-list/list/styles.module.css
+++ b/frontend/next-homework/src/app/components/boards-list/list/styles.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   width: 100vw;
   display: flex;
   padding: 2.4rem 4.8rem;
@@ -9,7 +9,7 @@
   border-radius: 1.6rem;
   background: #fff;
   box-shadow: 0rem 0rem 2rem 0rem rgba(0, 0, 0, 0.08);
-}
+} */
 
 /* 표 부분 */
 .table {
@@ -21,6 +21,15 @@
 }
 
 /* 목록 헤더 */
+.topHeader {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 1.2rem 2rem;
+  align-items: center;
+  gap: 0.8rem;
+}
+
 .header {
   width: 100%;
   display: flex;
@@ -31,6 +40,7 @@
 }
 
 .title {
+  width: 10rem;
   text-align: center;
   color: var(--gray-900, #1c1c1c);
 
@@ -47,6 +57,7 @@
 }
 
 .content {
+  width: 10rem;
   overflow: hidden;
   text-align: center;
   text-overflow: ellipsis;
@@ -71,6 +82,15 @@
 .button {
   width: 2.4rem;
   height: 2.4rem;
+}
+
+.delete {
+  display: none;
+}
+
+/* 버튼 호버 */
+.topHeader:hover .delete {
+  display: inline-block;
 }
 
 /* 데스크탑 */
