--- a/myhomework/day29/src/components/boards-detail/detail/styles.module.css
+++ b/myhomework/day29/src/components/boards-detail/detail/styles.module.css
@@ -34,6 +34,12 @@
   height: 24px;
 }
 
+.locationButton {
+  border: none;
+  box-shadow: none;
+  padding: 0px 0px 10px;
+}
+
 .writerName {
   display: flex;
   align-items: center;
@@ -83,11 +89,6 @@
   justify-content: center;
   align-items: center;
   background-color: #f2f2f2;
-}
-
-.previewImg {
-  width: 822px;
-  height: 464px;
 }
 
 .evaluate {
