--- a/02-main_camp/Day32/src/app/components/boards/Boards-detail/Comment-list/styles.module.css
+++ b/02-main_camp/Day32/src/app/components/boards/Boards-detail/Comment-list/styles.module.css
@@ -3,3 +3,9 @@
   flex-direction: column;
   gap: 0.5rem;
 }
+
+.commentsContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
