--- a/02-main_camp/Day32/src/app/components/boards/Boards-detail/Comment/styles.module.css
+++ b/02-main_camp/Day32/src/app/components/boards/Boards-detail/Comment/styles.module.css
@@ -1,3 +1,9 @@
+.commentContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 .headerContainer {
   display: flex;
   justify-content: space-between;
