--- a/homework/my-app/src/components/boards-detail/comment-write/styles.module.css
+++ b/homework/my-app/src/components/boards-detail/comment-write/styles.module.css
@@ -1,3 +1,9 @@
+.css_display {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .css_wrapper {
   width: 1280px;
   margin: 40px 0px;
