--- a/homework/my-app/src/app/globals.css
+++ b/homework/my-app/src/app/globals.css
@@ -18,9 +18,12 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
-  width: 100%;
-  display: flex;
-  justify-content: center;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /* width: 100%; */
+  /* display: flex;
+  justify-content: center; */
 }
 
 @layer utilities {
