--- a/homework/my-app/src/components/boards-detail/comment-list/styles.module.css
+++ b/homework/my-app/src/components/boards-detail/comment-list/styles.module.css
@@ -1,3 +1,9 @@
+.css_section {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
 .css_wrapper {
   width: 1280px;
   display: flex;
@@ -17,6 +23,20 @@
 .css_writer {
   width: 100%;
   height: 24px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.css_writerDiv {
+  height: 24px;
+  display: flex;
+  gap: 4px;
+}
+
+.css_editCloseBtn {
+  height: 24px;
+  display: flex;
+  gap: 8px;
 }
 
 .css_comment {
