--- a/cna-homework/src/components/boards-detail/comment-write/styles.module.css
+++ b/cna-homework/src/components/boards-detail/comment-write/styles.module.css
@@ -11,7 +11,6 @@
   height: auto;
   /* background-color: antiquewhite; */
   border-top: 1px solid #e4e4e4;
-
 }
 .commentTitle {
   /* background-color: aqua; */
@@ -105,4 +104,31 @@
   font-weight: 600;
   line-height: 24px;
   text-align: center;
+}
+/* 수정버튼영역  */
+.editBtnArea {
+  display: flex;
+  justify-content: end;
+  gap: 16px;
+}
+.exit {
+  width: 70px;
+  height: 48px;
+  border-radius: 8px;
+  padding: 12px 16px;
+  border: 1px solid #000000;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: -0.1;
+}
+.editBtn {
+  width: 99px;
+  height: 48px;
+  border-radius: 8px;
+  background-color: #000000;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
 }
