--- a/homework/my-app/src/components/boards-detail/detail/style.module.css
+++ b/homework/my-app/src/components/boards-detail/detail/style.module.css
@@ -19,8 +19,7 @@ body{
 .container {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 60px 0;
-  border-bottom: 1px solid var(--gray-300);
+  padding: 30px 0;
 }
 .bigTitleContainer {
   display: flex;
@@ -239,6 +238,7 @@ body{
   margin-left: 10px;
   display: flex;
   gap: 8px;
+  margin-bottom: 10px;
 }
 .commentInput {
   width: 100%;
