--- a/my-app/src/components/boards-write/styles.module.css
+++ b/my-app/src/components/boards-write/styles.module.css
@@ -85,6 +85,8 @@
 
   border-radius: 8px;
   border: 1px solid var(--Gray-Gray-200, #d4d3d3);
+
+  padding-bottom: 300px; /* 텍스트가 위쪽으로 붙게 */
 }
 
 .주소입력하는곳 {
