--- a/maincamp/my-app/src/components/boards-detail/detail/styles.module.css
+++ b/maincamp/my-app/src/components/boards-detail/detail/styles.module.css
@@ -116,6 +116,8 @@
     justify-content:center;
     align-items:center;
     gap:2.4rem;
+    border-bottom:0.1rem solid #e4e4e4;
+    padding-bottom:4.8rem;
 }
 .bottomBtn button{
     border-radius:0.8rem;
