[241018] 메인캠프 과제제출 서준형

--- a/maincamp/my-app/src/components/boards-detail/comment-write/styles.module.css
+++ b/maincamp/my-app/src/components/boards-detail/comment-write/styles.module.css
@@ -1,7 +1,11 @@
-.commentWrap{
+.comment_write_wrap{
     width:128rem;
     height:40rem;
+    margin:0 auto;
     margin-top:6rem;
+    display:flex;
+    flex-direction:column;
+    gap:2.4rem;
 }
 
 /* 댓글 상단 이미지 */
