댓글 줄바꿈 수정

--- a/Next/nextproject/next-app/src/app/component/board-list/pagination/style.module.css
+++ b/Next/nextproject/next-app/src/app/component/board-list/pagination/style.module.css
@@ -1,10 +1,12 @@
+.css_pagebox {
+  display: flex;
+  justify-content: space-between;
+}
+
 .css_pagination {
-  margin-left: 58px;
-  margin-right: 58px;
+  gap: 10px;
 }
 
 .css_clickpagenum {
   color: red;
-  margin-left: 58px;
-  margin-right: 58px;
 }
