quill 관련 테스트 파일 추가 및 수정, 아폴로 셋팅 수정

--- a/next_과제/src/components/reactQuillBox/index.module.scss
+++ b/next_과제/src/components/reactQuillBox/index.module.scss
@@ -1,6 +1,12 @@
 .reactQuillBox {
-  p {
-    font-size: var(--font-base-size);
-    font-family: var(--font-base-family);
+  [class~="ql-container"] {
+    overflow: visible;
+    resize: vertical;
+    min-height: 31.25rem;
+
+    p {
+      font-size: var(--font-base-size);
+      font-family: var(--font-base-family);
+    }
   }
 }
