--- a/03-react-hw/DAY29/src/app/globals.css
+++ b/03-react-hw/DAY29/src/app/globals.css
@@ -10,9 +10,9 @@
 
 body {
   font-family: var(--font-pretendard);
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  padding: 2.5rem;
+  padding: 2.5rem; */
 }
 
 input,
