--- a/react-homework/day35/src/components/boards-write/styles.module.css
+++ b/react-homework/day35/src/components/boards-write/styles.module.css
@@ -46,6 +46,14 @@
   gap: 8px;
 }
 
+.input_box_zip_code {
+  padding: 12px 16px;
+  flex-direction: column;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+  width: 82px;
+}
+
 .upload_group {
   display: flex;
   gap: 16px;
