--- a/src/components/boards-detail/detail/styles.module.css
+++ b/src/components/boards-detail/detail/styles.module.css
@@ -6,6 +6,10 @@
     width: 1280px;
     height: auto;
     /* background-color: orange; */
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
 }
 
 .headerdetail {
