feat: 이미지 업로드 기능 구현

--- a/trip-talk/src/app/_components/ImageUploader/styles.module.css
+++ b/trip-talk/src/app/_components/ImageUploader/styles.module.css
@@ -7,3 +7,11 @@
   color: #777;
   @apply text-base font-normal;
 }
+
+.input {
+  @apply hidden;
+}
+
+.upload_image {
+  @apply w-40 h-40 rounded-lg;
+}
