--- a/my-app/src/components/boards-write/styles.module.css
+++ b/my-app/src/components/boards-write/styles.module.css
@@ -128,12 +128,13 @@
   height: 160px;
   border-radius: 8px;
   background-color: #f2f2f2;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-  color: #777777;
+  overflow: hidden;
+}
+
+.photoCardImage {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
 
 .footer {
@@ -189,4 +190,15 @@
 .add_img {
   width: 21.67px;
   height: 21.67px;
+}
+
+.image_gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+
+.gallery_image {
+  border-radius: 8px;
+  object-fit: cover;
 }
