[241021] 게시글 이미지 수정, 이미지 미리보기 삭제, 디테일페이지 이미지 보여주기

--- a/react-homework/day36/src/components/board-detail/detail/styles.module.css
+++ b/react-homework/day36/src/components/board-detail/detail/styles.module.css
@@ -75,6 +75,13 @@
   display: block;
 }
 
+.image_box {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 24px;
+}
+
 .main_image {
   width: 400px;
   height: auto;
