--- a/maincamp/my-app/src/app/globals.css
+++ b/maincamp/my-app/src/app/globals.css
@@ -21,7 +21,10 @@ body {
 } */
 *{
   padding:0;
+  margin:0;
+  box-sizing:border-box;
   font-size:62.5%;
+  /* font-family:Pretendard-Regular.woff2 */
 }
 
 @layer utilities {
