--- a/my-app/src/components/boards-write/styles.module.css
+++ b/my-app/src/components/boards-write/styles.module.css
@@ -124,11 +124,13 @@
 }
 
 .photoCard {
+  display: flex;
   width: 160px;
   height: 160px;
   border-radius: 8px;
   background-color: #f2f2f2;
   overflow: hidden;
+  align-items: center;
 }
 
 .photoCardImage {
