--- a/03-react-hw/DAY29/src/components/boards-list/list/styles.module.css
+++ b/03-react-hw/DAY29/src/components/boards-list/list/styles.module.css
@@ -1,5 +1,5 @@
 .총상자 {
-  @apply rounded-lg bg-white shadow-lg min-w-[680px] px-[48px] py-6 self-stretch max-w-[1280px];
+  @apply rounded-lg bg-white shadow-lg min-w-[680px] px-[48px] py-6 self-stretch w-full;
 }
 
 .게시글전체상자 {
