--- a/src/components/boards-detail/comments-list/styles.module.css
+++ b/src/components/boards-detail/comments-list/styles.module.css
@@ -1,5 +1,5 @@
 .commentListBox {
-    width: 1280px;
+    width: 100%;
     height: 80px;
     border-bottom: 1px solid #c7c6c7;
     padding: 100px;
