--- a/src/components/boards-list/list/styles.module.css
+++ b/src/components/boards-list/list/styles.module.css
@@ -1,6 +1,7 @@
 .layout {
-    width: 1280px;
-    height: 656px;
+    
+    width: 100%;
+    /* height: 656px; */
     border-radius: 8px;
     box-shadow: 0px 0px 20px 0px #00000014;
     margin: 40px 0;
@@ -9,6 +10,15 @@
     align-items: center;
     gap: 8px;
 }
+
+/* .slidImage {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(50%, 50%);
+} */
 
 .titleBox {
     width: 1184px;
