[241022]DAY 37 과제 완료

--- a/trip-talk/src/app/_component/form/Input.module.css
+++ b/trip-talk/src/app/_component/form/Input.module.css
@@ -13,3 +13,15 @@
   border: 1px solid var(--Gray-Gray-200, #d4d3d3);
   /* background: var(--Gray-W, #fff); */
 }
+
+.smallInput {
+  width: 50px;
+}
+
+.middleInput {
+  width: 100px;
+}
+
+.lagreInput {
+  width: 300px;
+}
