--- a/myhomework/day32/src/commons/layout/navigation/styles.module.css
+++ b/myhomework/day32/src/commons/layout/navigation/styles.module.css
@@ -58,3 +58,13 @@
   border-bottom: 3px solid #000;
   font-family: "Pretendard-Bold.otf";
 }
+
+.searchSection {
+  display: flex;
+  align-items: center;
+  width: 460px;
+  height: 42px;
+  border: 1px solid #000000;
+  border-radius: 100px;
+  padding: 12px 16px;
+}
