[241023] 메인캠프 과제제출 서준형

--- a/maincamp/my-app/src/components/boards-detail/detail/styles.module.css
+++ b/maincamp/my-app/src/components/boards-detail/detail/styles.module.css
@@ -95,8 +95,8 @@
     margin-top:2.4rem;
 }
 .emotion .bad, .emotion .good{
-    width:2.4rem;
-    height:2.4rem;
+    /* width:2.4rem;
+    height:2.4rem; */
     text-align:center;
 }
 .emotion .badIcon{
