--- a/homework/my-app/src/app/globals.css
+++ b/homework/my-app/src/app/globals.css
@@ -2,7 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 /* 
 :root {
   --background: #ffffff;
@@ -29,35 +28,35 @@ body {
 } */
 
 @font-face {
-  font-family: 'boldEn';
-  src: url('./fonts/BlackHanSans-Regular.ttf') format('truetype');
+  font-family: "boldEn";
+  src: url("./fonts/BlackHanSans-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
-  font-family: 'basic';
-  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KORAILCondensed-Regular.woff2') format('woff2');
+  font-family: "basic";
+  src: url("https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KORAILCondensed-Regular.woff2")
+    format("woff2");
   font-weight: normal;
   font-style: normal;
 }
 :root {
   --gray-50: #f2f2f2;
   --gray-800: #333;
-  --gray-100: #E4E4E4;
-  --gray-300: #C7C7C7;
-  --gray-700: #5F5F5F;
+  --gray-100: #e4e4e4;
+  --gray-300: #c7c7c7;
+  --gray-700: #5f5f5f;
   --gray-900: #3c3c3c;
-  --Gray-Gray-200: #D4D3D3;
-  --Gray-W: #FFF;
-  --background: #f5f4f1
+  --Gray-Gray-200: #d4d3d3;
+  --Gray-W: #fff;
+  --background: #f5f4f1;
 }
-body{
-  padding:0;
-  margin:0;
-  font-family: 'boldEn', sans-serif;
+body {
+  padding: 2vw;
+  margin: 0;
+  font-family: "boldEn", sans-serif;
 }
 input {
-  margin: 0;
   padding: 0;
 }
 textarea {
@@ -65,10 +64,9 @@ textarea {
   height: 336px; /* 높이 설정 */
   padding: 12px 16px; /* 내부 여백 설정 */
   border-radius: 8px; /* 모서리 둥글게 */
-  border: 1px solid var(--Gray-Gray-200, #D4D3D3); /* 테두리 색상 및 두께 설정 */
-  background: var(--Gray-W, #FFF); /* 배경 색상 설정 */
+  border: 1px solid var(--Gray-Gray-200, #d4d3d3); /* 테두리 색상 및 두께 설정 */
+  background: var(--Gray-W, #fff); /* 배경 색상 설정 */
   max-width: 100%; /* 너비를 부모 요소에 맞추기 위해 설정 (필요에 따라 조정) */
 
   resize: none; /* 크기 조절 비활성화 */
 }
-
