--- a/homework/my-app/src/components/boards-list/banner/style.module.css
+++ b/homework/my-app/src/components/boards-list/banner/style.module.css
@@ -1,5 +1,9 @@
+.Container {
+  display: flex;
+  justify-content: center;
+}
 .bannerContainer {
-  width: 1921px;
+  width: 100%;
   height: 487px;
   flex-shrink: 0;
 }
