--- a/Next/nextproject/next-app/src/app/globals.css
+++ b/Next/nextproject/next-app/src/app/globals.css
@@ -20,11 +20,10 @@ body {
 }
 
 /* * {
-  box-sizing: border-box;
+  /* box-sizing: border-box;
   margin: 0;
   padding: 0;
 } */
-
 body {
   display: flex;
   flex-direction: column;
