--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,21 @@
     }
 }
 
+/* @font-face {
+    font-family: 'pretend'; 
+    src: url('/fonts/Pretendard-Regular.woff') format('woff');
+    font-weight: normal; 
+    font-style: normal; 
+} */
+
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff')
+        format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 * {
     padding: 0;
     margin: 0;
@@ -21,9 +36,7 @@
 }
 
 body {
-    color: var(--foreground);
-    background: var(--background);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Pretendard-Regular';
 }
 
 hr {
