--- a/src/components/boards-detail/detail/styles.module.css
+++ b/src/components/boards-detail/detail/styles.module.css
@@ -61,6 +61,7 @@
     flex-direction: row;
     justify-content: center;
     padding: 20px 0 50px 0;
+    gap: 10px;
 }
 
 .bottombutton {
@@ -71,21 +72,18 @@
     padding: 0 0 50px 0;
 }
 
-.listbutton {
-    width: 105px;
+.listbutton,
+.penbutton {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 110px;
     height: 40px;
     border-radius: 8px;
     border: 1px 0px 0px 0px;
     opacity: 0px;
     border: 1px solid var(--gray-B, #000000);
-}
-
-.penbutton {
-    width: 105px;
-    height: 40px;
-    /* padding: 8px 12px 8px 12px; */
-    gap: 8px;
-    border-radius: 8px;
-    border: 1px 0px 0px 0px;
-    border: 1px solid var(--gray-B, #000000);
+    padding: 5px;
+    gap: 5px;
 }
