--- a/02-main_camp/Day36/src/app/_components/boards/Boards-write/components/image-upload-form/styles.module.css
+++ b/02-main_camp/Day36/src/app/_components/boards/Boards-write/components/image-upload-form/styles.module.css
@@ -11,10 +11,34 @@
   display: none;
 }
 
+.imageContainer {
+  width: 100%;
+  height: 100%;
+}
+
 .uploadImage {
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.deleteButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 1.5rem;
+  height: 1.5rem;
+  position: absolute;
+  top: 0.75rem;
+  right: 0.75rem;
+  background-color: #00000066;
+  border-radius: 50%;
+}
+
+.deleteImageIcon {
+  width: 1rem;
+  height: 1rem;
+  color: #ffffff;
 }
 
 #uploadLabel {
