[241024] styles: - 게시판 상세 페이지에서 업로드한 이미지 보여주도록 구현

--- a/02-main_camp/Day36/src/app/_components/boards/Boards-detail/Detail/styles.module.css
+++ b/02-main_camp/Day36/src/app/_components/boards/Boards-detail/Detail/styles.module.css
@@ -52,6 +52,19 @@
   gap: 1.5rem;
 }
 
+.uploadImagesContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+/* 이미지 스타일이 안먹음;; */
+.uploadImage {
+  /* width: 12.5rem; */
+  height: auto;
+  object-fit: contain;
+}
+
 .BoardsDetail_p {
   color: black;
   font-weight: 400;
