--- a/src/components/boards-detail/comments-list/styles.module.css
+++ b/src/components/boards-detail/comments-list/styles.module.css
@@ -1,8 +1,9 @@
 .commentListBox {
-    width: 100%;
+    width: 1358px;
     height: 80px;
     border-bottom: 1px solid #c7c6c7;
     padding: 100px;
+    margin: 0 auto;
 }
 
 .commentListBoxHeader {
